# ls-py185-flash-cards

./: .gitignore  README.md  app.py  pyproject.toml  schema.sql
flashcards/: database_persistence.py  session_persistence.py  utils.py
static/javascripts/: application.js
static/stylesheets/: application.css
templates/: create_flashcard.html  deck.html  flashcards.html  layout.html  new_deck.html  rename_deck.html  study.html
tests/: test_app.py
