[project]
name = "ls-py185-flash-cards"
version = "0.1.0"
description = ""
authors = [
    {name = "Justin Schultz", email = "SchultzJustin@ymail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.10"
flask = "3.1.1"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false